--- a/index.css
+++ b/index.css
@@ -2,19 +2,30 @@
   margin: 0;
   padding: 0;
 }
-.move_block {
-  position: fixed;
+.header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
   top: 0;
-  left: 0;
-  width: 100px;
-  height: 100px;
-  background: #f00;
+  height: 50px;
+  background-color: #0023ff;
+  color: #ffffff;
+  padding: 0px 40px;
 }
-.showMask {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 9999;
+.header .header_describe{
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 20px;
+}
+.header .header_right{
+  display: flex;
+}
+.header .header_button{
+  margin-left: 20px;
+  font-size: 18px;
+  cursor: pointer;
+}
+.header .header_button:hover{
+  text-decoration: underline;
 }
