--- a/index.css
+++ b/index.css
@@ -2,12 +2,14 @@
   margin: 0;
   padding: 0;
 }
+.header_component{
+  position: sticky;
+  top: 0;
+}
 .header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: sticky;
-  top: 0;
   height: 50px;
   background-color: #0023ff;
   color: #ffffff;
