--- a/index.css
+++ b/index.css
@@ -2,3 +2,11 @@
   margin: 0;
   padding: 0;
 }
+pre{
+  margin: 10px 0px;
+  padding: 10px;
+  background: rgb(40, 44, 52);
+  color: rgb(255, 255, 255);
+  border-radius: 10px;
+  overflow: auto;
+}
