--- a/Page/Introduction/index.css
+++ b/Page/Introduction/index.css
@@ -2,9 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 80px 0px;
 }
 .Introduction .top{
-  margin-top: 80px;
   width: 80%;
   padding: 40px;
   border-radius: 20px;
