--- a/Component/Header/index.css
+++ b/Component/Header/index.css
@@ -32,3 +32,7 @@
 .header_component .header_button:hover{
   text-decoration: underline;
 }
+.github_button{
+  margin-left: 10px;
+  cursor: pointer;
+}
